fixed overlapping scale and top margin

--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body{
 	background:white;
 	font-family:"Raleway", sans-serif;
 	margin:0;
+	margin-top: 85px;
 }
 
 
@@ -29,6 +30,7 @@ header nav ul a {
 	position: fixed;
 	top: 0;
 	width: 100%;
+	z-index:99;
 }
 
 .top-link{
@@ -146,6 +148,7 @@ nav ul a{
 
 .logo {
 	transition: all .2s ease-in-out;
+	overflow:hidden;
 }
 
 .logo:hover {
